初步完成炼金锅逻辑原型